--- a/recycleViewDemo/app/src/main/AndroidManifest.xml
+++ b/recycleViewDemo/app/src/main/AndroidManifest.xml
@@ -16,7 +16,14 @@
         <!--<category android:name="android.intent.category.LAUNCHER" />-->
         <!--</intent-filter>-->
         <!--</activity>-->
-        <activity android:name=".header.HeaderActivity">
+        <!--<activity android:name=".header.HeaderActivity">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+        <activity android:name=".slide.SlideActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
